DEP Update minimum composer versions

--- a/composer.json
+++ b/composer.json
@@ -24,16 +24,16 @@
     "require": {
         "php": "^8.3",
         "composer-runtime-api": "^2.0",
-        "composer/installers": "^2.2",
-        "guzzlehttp/guzzle": "^7.5.0",
-        "guzzlehttp/psr7": "^2.4.0",
+        "composer/installers": "^2.3",
+        "guzzlehttp/guzzle": "^7.9",
+        "guzzlehttp/psr7": "^2.7",
         "embed/embed": "^4.4.7",
-        "league/csv": "^9.8.0",
+        "league/csv": "^9.18",
         "m1/env": "^2.2.0",
-        "masterminds/html5": "^2.7.6",
-        "monolog/monolog": "^3.2.0",
-        "nikic/php-parser": "^5.1.0",
-        "psr/container": "^1.1 || ^2.0",
+        "masterminds/html5": "^2.9",
+        "monolog/monolog": "^3.8",
+        "nikic/php-parser": "^5.3",
+        "psr/container": "^2.0",
         "psr/http-message": "^1",
         "sebastian/diff": "^6.0",
         "sensiolabs/ansi-to-html": "^1.2",
